Dictionary 리팩토링