@@ -1,28 +1,30 @@
 package com.blisgo.service.impl;
 
+import com.blisgo.domain.entity.Account;
+import com.blisgo.domain.entity.Dictionary;
 import com.blisgo.domain.entity.Dogam;
 import com.blisgo.domain.entity.cmmn.Wastes;
-import com.blisgo.domain.mapper.AccountMapper;
 import com.blisgo.domain.mapper.DictionaryMapper;
 import com.blisgo.domain.mapper.HashtagMapper;
 import com.blisgo.domain.repository.DictionaryRepository;
 import com.blisgo.service.DictionaryService;
-import com.blisgo.web.dto.AccountDTO;
 import com.blisgo.web.dto.DictionaryDTO;
 import com.blisgo.web.dto.GuideDTO;
 import com.blisgo.web.dto.HashtagDTO;
+import org.slf4j.Logger;
 import org.springframework.stereotype.Service;
 
 import java.util.List;
 import java.util.Optional;
-import java.util.stream.Collectors;
 
 @Service
 public class DictionaryServiceImpl implements DictionaryService {
+
+    private static final Logger log = org.slf4j.LoggerFactory.getLogger(DictionaryServiceImpl.class);
     private final DictionaryRepository dictionaryRepository;
 
     private static int index = 0;
-    private static final int limit = 24;
+    private static final int limit = 48;
 
     public DictionaryServiceImpl(DictionaryRepository dictionaryRepository) {
         this.dictionaryRepository = dictionaryRepository;
@@ -31,38 +33,44 @@ public class DictionaryServiceImpl implements DictionaryService {
     @Override
     public List<DictionaryDTO> findDictionaries() {
         index = 0;
-        var rs = dictionaryRepository.selectDictionaryList(index, limit);
-        return DictionaryMapper.INSTANCE.toDTOList(rs);
+        return DictionaryMapper.INSTANCE.toDTOList(
+                dictionaryRepository.selectDictionaryList(index, limit)
+        );
     }
 
     @Override
-    public Optional<DictionaryDTO> findDictionary(DictionaryDTO dictionaryDTO) {
-        var dictionary = DictionaryMapper.INSTANCE.toEntity(dictionaryDTO);
-        var rs = dictionaryRepository.selectDictionary(dictionary);
-        return Optional.ofNullable(DictionaryMapper.INSTANCE.toDTO(rs));
+    public Optional<DictionaryDTO> findDictionary(int dicNo) {
+        return Optional.ofNullable(
+                DictionaryMapper.INSTANCE.toDTO(
+                        dictionaryRepository.selectDictionary(dicNo)
+                )
+        );
     }
 
     @Override
-    public List<HashtagDTO> findHashtag(DictionaryDTO dictionaryDTO) {
-        var dictionary = DictionaryMapper.INSTANCE.toEntity(dictionaryDTO);
-        var rs = dictionaryRepository.selectHashtagInnerJoinGuide(dictionary);
-        return HashtagMapper.INSTANCE.toDTOList(rs);
+    public List<HashtagDTO> findHashtag(int dicNo) {
+        return HashtagMapper.INSTANCE.toDTOList(
+                dictionaryRepository.selectHashtagInnerJoinGuide(dicNo)
+        );
     }
 
     @Override
     public List<DictionaryDTO> findRelatedDictionaries(List<HashtagDTO> hashtagDTO) {
-        List<Wastes> tags = hashtagDTO.stream().map(HashtagDTO::guide).map(GuideDTO::guideCode).collect(Collectors.toList());
-        var rs = dictionaryRepository.selectRelatedDictionaryList(tags);
-        return DictionaryMapper.INSTANCE.toDTOList(rs);
+        List<Wastes> tags = hashtagDTO.stream()
+                .map(HashtagDTO::guide)
+                .map(GuideDTO::guideCode).toList();
+
+        return DictionaryMapper.INSTANCE.toDTOList(
+                dictionaryRepository.selectRelatedDictionaryList(tags)
+        );
     }
 
     @Override
     public List<DictionaryDTO> findDictionaryMore() {
-        // 더보기
         index += limit;
-
-        var rs = dictionaryRepository.selectDictionaryList(index, limit);
-        return DictionaryMapper.INSTANCE.toDTOList(rs);
+        return DictionaryMapper.INSTANCE.toDTOList(
+                dictionaryRepository.selectDictionaryList(index, limit)
+        );
     }
 
     @Override
@@ -71,18 +79,18 @@ public class DictionaryServiceImpl implements DictionaryService {
     }
 
     @Override
-    public boolean countDictionaryHit(DictionaryDTO dictionaryDTO) {
-        var dictionary = DictionaryMapper.INSTANCE.toEntity(dictionaryDTO);
-        return dictionaryRepository.updateDictionaryHit(dictionary);
+    public boolean countDictionaryHit(int dicNo) {
+        return dictionaryRepository.updateDictionaryHit(dicNo);
     }
 
     @Override
-    public boolean addDogam(DictionaryDTO dictionaryDTO, AccountDTO accountDTO) {
-        var dictionary = DictionaryMapper.INSTANCE.toEntity(dictionaryDTO);
-        var account = AccountMapper.INSTANCE.toEntity(accountDTO);
-        var dogam = Dogam.builder().dictionary(dictionary).account(account).build();
-
-        return dictionaryRepository.insertDogam(dogam);
+    public boolean addDogam(int dicNo, int memNo) {
+        return dictionaryRepository.insertDogam(
+                Dogam.builder()
+                        .dictionary(Dictionary.builder().dicNo(dicNo).build())
+                        .account(Account.builder().memNo(memNo).build())
+                        .build()
+        );
     }
 
 }
